metadata/force-app/main/default/objects/CustomName_Zrpts__c/CustomName_Zrpts__c.object-meta.xml
<CustomObject>
    <description>Description_qzeqA</description>
    <label>CustomLabel_vFCVQ</label>
    <nameField>
        <label>CustomLabel_vFCVQ</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_vFCVQs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>