metadata/force-app/main/default/objects/CustomName_Zrpts__c/fields/CustomField_KSsOF__c.field-meta.xml
<CustomField>
    <fullName>CustomField_KSsOF__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldDAIeR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>